# everyday_guy_utilities

file_lookup/: .gitignore  pyproject.toml
file_lookup/lookup_package/: lookup_script.py
